# wildfire-recovery-argentina

./: .env.example  .env.template  .gitignore  CHANGELOG_DOCUMENTATION.md  Dockerfile.api  Dockerfile.worker  GO_LIVE_RUNBOOK.md  README.md  carousel_dry_run_output.txt  celery_app.py  check_audit_events.py  check_eligible_episodes.py  check_existing_episodes.py  cleanup_log.md  clustering_optimization_report.md  conftest.py  debug_app_diagnostics.py  debug_imports.py  docker-compose.yml  go_live_status.md  package-lock.json  package.json  pipeline.md  pyproject.toml  pytest.ini  reproduce_issue.py  requirements.txt  run_migration.py  structure.txt
.github/: dependabot.yml
Architecture/: PROJECT_PLAN.md  forestguard_architecture.md  forestguard_use_cases.md  wildfire_branding.md
UC-13/: UC_13_current.md  fires.py  fires_schema.py  test_fires.py
api/: config.py  database.py  main.py  models.py
app/: __init__.py  main.py  render.yaml
artifacts/: gcs_conn_report.json  uc_f02_validation_report.json
backup_scripts/: populate_h3.py.backup  populate_h3_final.py.backup  populate_h3_fixed.py.backup  populate_h3_optimized.py.backup  populate_h3_python.py.backup  test_uc_f05.py.backup
database/: README.md  alembic.ini  schema.sql  schema_v0.1.sql
deployment/: DEPLOYMENT.md  forestguard.service  nginx.conf
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
docs/: faq.md  glosario.md  glossary.md  manual_de_usuario.md  performance_fire_history.md  pipeline.md  preguntas_frecuentes.md  slos.md  testing_notes.md  use_cases.md  user_manual.md
episode_creation_flow/: 1_tech_tasks_final.md  plan_episode_flow.md  task_execution_log.md  technical_debt.md
frontend/: .env.example  Dockerfile  README.md  cypress.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
image_service/: README.md  config.py  gee_client.py  geo_utils.py  main.py  report_generator.py  sentinel_analyzer.py
migrations/: create_users.sql
notebooks/: incendios_para_analisis.csv  preprocesar_firms.py
review/: SECURITY_IMPROVEMENTS_SUMMARY.md  backlog_recommendations.md  fixes_applied.md  (+5 more)
(+502 files in other folders)
