[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-recovery-argentina"
version = "3.0.0"
authors = [
  { name="Nicolas Gabriel H.", email="nicolasgabrielh91@gmail.com" },
]
description = "Wildfire recovery monitoring platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "geoalchemy2",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "celery",
    "redis"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false
